[package]
name = "puzzlip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
image = "0.24.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }
reqwest = { version = "0.11.13", features = ["blocking"] }
wasm-bindgen-futures = "0.4.33"
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] } 
serde-wasm-bindgen = "0.4.5"
base64 = "0.13.1"
bytebuffer = "2.0.1"
js-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = ["CanvasRenderingContext2d", "HtmlImageElement", "ImageData", "Document", "Element", "HtmlCanvasElement", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
